tests/functional/lang/eval-fail-length-2.err.exp
error:
       … while calling the 'length' builtin
         at /pwd/lang/eval-fail-length-2.nix:1:1:
            1| builtins.length "foo"
             | ^
            2|

       … while evaluating the first argument passed to builtins.length

       error: expected a list but found a string: "foo"
